[tool.poetry]
name = "fracturas"
version = "0.1.0"
description = "Aplicación de análisis de fracturas"
authors = ["Your Name <you@example.com>"]
readme = "README_unified.txt"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "*"
plotly = "*"
numpy = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
